<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Walk">

    <EditText
        android:id="@+id/walkTitle"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_walkTitle"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_walkDescription"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walkTitle" />

    <RadioGroup
        android:id="@+id/radioGroupDifficulty"
        android:layout_width="150dp"
        android:layout_height="148dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <RadioButton
            android:id="@+id/radioEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/easy"
            app:layout_constraintEnd_toStartOf="@+id/radioMedium"
            app:layout_constraintHorizontal_bias="0.794"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="189dp" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:padding="10dp"
            android:text="@string/medium"
            app:layout_constraintEnd_toStartOf="@+id/radioHard"
            tools:layout_editor_absoluteY="189dp" />

        <RadioButton
            android:id="@+id/radioHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:padding="10dp"
            android:text="@string/hard"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="189dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupTerrain"
        android:layout_width="174dp"
        android:layout_height="149dp"
        android:layout_marginTop="32dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroupDifficulty"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <RadioButton
            android:id="@+id/radioBeach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/beach"
            tools:layout_editor_absoluteY="177dp" />

        <RadioButton
            android:id="@+id/radioForest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:padding="10dp"
            android:text="@string/forest"
            tools:layout_editor_absoluteY="177dp" />

        <RadioButton
            android:id="@+id/radioHill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:text="@string/hill"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="177dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_addWalk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDifficulty" />

    <Button
        android:id="@+id/walkLocation"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/button_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/chooseImage"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/button_addImage"
        app:layout_constraintEnd_toStartOf="@+id/walkLocation"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <ImageView
        android:id="@+id/walkImage"
        android:layout_width="344dp"
        android:layout_height="222dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseImage"
        app:layout_constraintVertical_bias="0.233"
        app:srcCompat="@drawable/ic_launcher_background" />


</androidx.constraintlayout.widget.ConstraintLayout>